--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -178,7 +178,7 @@ body,
     margin: 0;
   }
   .article-entry {
-    padding: 20px 0 30px 0;
+    padding: 20px 0 0;
   }
   .article-inner h1.article-title,
   .article-title {
