--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -71,6 +71,10 @@
   }
 }
 
+.count {
+  margin-right: 20px !important;
+}
+
 .archive-article-inner {
   .icon-clock {
     margin-right: 5px;
@@ -102,6 +106,7 @@
       color: #666;
       font-size: 14px;
     }
+
     .archive-article-date {
       cursor: default;
       font-size: 12px;
@@ -109,6 +114,7 @@
       margin-top: -10px;
       margin-right: 0;
       time {
+        border: 1px solid red;
       }
     }
     .article-category {
