--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -127,14 +127,38 @@ body,
 }
 
 .article-header {
+  // position: relative;
   border-left: none;
   padding: 0;
   border-bottom: 1px dotted #ddd;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+
+  .time-count {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+
+  .count {
+    margin-left: 30px;
+  }
+
   h1 {
     margin-bottom: 10px;
   }
   .archive-article-date {
-    float: initial;
+    .icon {
+      margin: 5px 5px 5px 0px;
+    }
   }
 }
 .header-subtitle {
@@ -178,7 +202,7 @@ body,
     margin: 0;
   }
   .article-entry {
-    padding: 20px 0 0;
+    padding: 10px 0 0;
   }
   .article-inner h1.article-title,
   .article-title {
