--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.5d5469.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.2fd4c0.css">
