--- a/source-src/css/footer.scss
+++ b/source-src/css/footer.scss
@@ -21,6 +21,7 @@
     #footer-info {
       width: 100%;
       height: 100%;
+      line-height: 25px;
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
