--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -159,7 +159,7 @@
   h6 {
     margin-top: 20px;
     font-weight: bold;
-    color: #dedede;
+    color: #f5edc6;
     padding-bottom: 5px;
     border-bottom: 1px solid #ddd;
   }
