--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -438,7 +438,9 @@ body,
       border-right: 0;
     }
     a {
-      font-size: 14px;
+      font-size: 16px;
+      height: 32px;
+      line-height: 32px;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
