--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -168,6 +168,7 @@
   }
   strong {
     font-weight: bold;
+    color: #d69e19;
   }
   .caption {
     display: block;
@@ -184,6 +185,7 @@
     border-bottom: 1px solid #fff;
   }
   pre {
+    white-space: pre;
     line-height: 1.5;
     margin-top: 10px;
     padding: 5px 15px;
