--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -17,8 +17,8 @@
         <% } %>
       </div>
       <div class="footer-right">
-        <a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/litten/hexo-theme-yilia"
-          target="_blank">Yilia</a> by Litten
+        <a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/dnhyxc/hexo-themes-dnhyxc"
+          target="_blank">dnhyxc</a> by ninghai
       </div>
     </div>
   </div>
