--- a/source-src/css/highlight.scss
+++ b/source-src/css/highlight.scss
@@ -18,7 +18,7 @@
   font-family: "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace;
 }
 .article-entry code {
-  background: #eee;
+  // background: rgba(0, 0, 0, 0.6);
   padding: 0 0.3em;
   border: none;
 }
