--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -92,12 +92,11 @@
     font-size: 14px;
   }
   blockquote {
-    background: #ddd;
-    border-left: 5px solid #ccc;
-    padding: 15px 20px;
+    padding: 10px 10px;
     margin-top: 10px;
-    border-left: 5px solid #657b83;
-    background: #f6f6f6;
+    border-left: 5px solid #ffd900;
+    background: #7e7b6f;
+    color: rgb(26, 25, 25);
     p {
       margin-top: 0;
       margin-bottom: 0;
