--- a/source-src/css/social.scss
+++ b/source-src/css/social.scss
@@ -4,6 +4,7 @@
   transition: transform 0.3s ease-in;
   .social {
     margin-top: 10px;
+    margin-bottom: 20px;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
