--- a/source-src/css/aside.scss
+++ b/source-src/css/aside.scss
@@ -1,7 +1,7 @@
 .wrap-side-operation {
   position: fixed;
   right: 24px;
-  bottom: 130px;
+  top: 10px;
   z-index: 999;
   font-size: 14px;
   .icon-plane {
@@ -75,7 +75,7 @@
   margin-top: 10px;
   transition: 0.3s;
   &:hover {
-    background: rgba(36, 193, 246, 0.9);
+    background: #666;
   }
   .icon-font {
     font-size: 22px;
@@ -89,28 +89,27 @@
     left: 0;
   }
   .tooltip-east .tooltip-content {
-    min-height: 100px;
+    max-height: 320px;
     text-align: left;
-    padding: 5px 0 5px 20px;
+    padding: 10px 10px;
     right: 4.7em;
-    min-width: 200px;
+    max-width: 220px;
     width: initial;
     font-size: 14px;
     text-shadow: 1px 1px 1px #398199;
-    bottom: -10px;
     transform-origin: 100% 100%;
     transform: translate3d(0, -10px, 0) rotate3d(1, 1, 1, -30deg);
     a {
       color: #fff;
     }
     &::after {
-      top: initial;
-      bottom: 23px;
+      top: 30px;
     }
     .toc-article {
-      max-height: 500px;
-      overflow-x: hidden;
-      overflow-y: auto;
+      max-height: 300px;
+      height: 300px;
+      max-width: 200px;
+      overflow: auto;
     }
     .toc-article li ol,
     .toc-article li ul {
@@ -121,7 +120,6 @@
     }
   }
   .tooltip:hover .tooltip-content {
-    bottom: -10px;
     transform: translate(0);
   }
 }
