--- a/source-src/css/tooltip.scss
+++ b/source-src/css/tooltip.scss
@@ -39,12 +39,13 @@
   /* Tooltip */
 
   .tooltip-content {
+    height: 320px;
     position: absolute;
-    background: rgba(36, 193, 246, 0.9);
+    background: #666;
     z-index: 9999;
-    width: 200px;
-    bottom: 50%;
-    margin-bottom: -10px;
+    width: 220px;
+    // bottom: 50%;
+    // margin-bottom: -10px;
     border-radius: 20px;
     font-size: 1.1em;
     text-align: center;
