--- a/source-src/css/tooltip.scss
+++ b/source-src/css/tooltip.scss
@@ -141,6 +141,31 @@
     pointer-events: auto;
   }
 
+  /* Tooltip */
+
+  .tooltip-content {
+    position: absolute;
+    z-index: 9999;
+    width: 300px;
+    left: 50%;
+    bottom: 100%;
+    font-size: 16px;
+    line-height: 1;
+    text-align: center;
+    font-weight: 400;
+    color: #4d4d4d;
+    background: transparent;
+    opacity: 0;
+    margin: 0 0 -6px -150px;
+    cursor: default;
+    pointer-events: none;
+    font-family: "Satisfy", cursive;
+    -webkit-font-smoothing: antialiased;
+    -webkit-transition: opacity 0.3s 0.3s;
+    transition: opacity 0.3s 0.3s;
+    padding-bottom: 25px;
+  }
+
   .tooltip:hover .tooltip-content {
     opacity: 1;
     pointer-events: auto;
