--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.03cc01.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.1803c6.css">
