--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.a60553.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.b0bd15.css">
