--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.477da5.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.71a2a7.css">
