--- a/source-src/css/tooltip.scss
+++ b/source-src/css/tooltip.scss
@@ -38,13 +38,11 @@
 
   /* Tooltip */
   .tooltip-content {
-    height: 320px;
+    // height: 320px;
     position: absolute;
     background: #666;
     z-index: 9999;
     width: 220px;
-    // bottom: 50%;
-    // margin-bottom: -10px;
     border-radius: 20px;
     font-size: 1.1em;
     text-align: center;
