--- a/source-src/css/footer.scss
+++ b/source-src/css/footer.scss
@@ -16,7 +16,8 @@
     padding: 0 30px;
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
-    box-shadow: 0 -5px 10px #ccc inset;
+    box-shadow: inset 0 -2px 8px #ccc;
+    // box-shadow: 0 -5px 10px #ccc inset;
 
     #footer-info {
       width: 100%;
