--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -85,7 +85,8 @@ body,
     margin: 10px 10px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    box-shadow: 0 5px 10px #ccc inset;
+    // box-shadow: 0 5px 10px #ccc inset;
+    box-shadow: inset 0 2px 8px #ccc;
     font-size: 25px;
     font-weight: 700;
     text-align: center;
