--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.3d061c.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.cfc351.css">
