--- a/source-src/css/aside.scss
+++ b/source-src/css/aside.scss
@@ -1,7 +1,7 @@
 .wrap-side-operation {
   position: fixed;
-  right: 24px;
-  top: 10px;
+  right: 34px;
+  top: 18px;
   z-index: 999;
   font-size: 14px;
   .icon-plane {
@@ -16,7 +16,7 @@
   }
 }
 .mod-side-operation {
-  width: 40px;
+  width: 35px;
   text-align: center;
 }
 .jump-container {
@@ -30,8 +30,8 @@
 .toc-container {
   position: relative;
   cursor: pointer;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   opacity: 0.8;
 }
 .jump-plan-container {
@@ -56,7 +56,7 @@
     color: #fff;
     background: #ccc;
     transform: rotate(90deg);
-    font-size: 32px;
+    font-size: 35px;
     line-height: 40px;
     width: 40px;
     text-align: center;
@@ -71,20 +71,20 @@
 .toc-container.tooltip-left {
   background: #212121;
   box-shadow: 0 0 10px black;
-  border-radius: 40px;
-  margin-top: 10px;
+  border-radius: 35px;
   transition: 0.3s;
   &:hover {
     background: #666;
   }
   .icon-font {
-    font-size: 18px;
-    line-height: 30px;
-    color: #fff;
+    font-size: 20px;
+    line-height: 35px;
+    color: #ffd900;
+    font-weight: 700;
   }
   .tooltip {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     top: 0;
     left: 0;
   }
@@ -92,15 +92,16 @@
     // max-height: 320px;
     text-align: left;
     padding: 10px 10px;
-    right: 3.9em;
+    right: 4.4em;
     max-width: 220px;
     width: initial;
     font-size: 14px;
-    text-shadow: 1px 1px 1px #398199;
     transform-origin: 100% 100%;
     transform: translate3d(0, -10px, 0) rotate3d(1, 1, 1, -30deg);
     a {
-      color: #fff;
+      color: #ddd;
+      display: inline-block;
+      width: 100%;
     }
     &::after {
       top: 30px;
@@ -116,6 +117,12 @@
     }
     .toc-article li {
       white-space: nowrap;
+      cursor: pointer;
+      & a:hover {
+        color: black;
+        background-color: #d9ff00;
+        border-radius: 5px;
+      }
     }
   }
   .tooltip:hover .tooltip-content {
