--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -80,6 +80,7 @@ body,
   }
 
   .main {
+    box-sizing: border-box;
     height: 50px;
     line-height: 50px;
     margin: 10px 10px;
@@ -87,9 +88,10 @@ body,
     border-top-right-radius: 30px;
     // box-shadow: 0 5px 10px #ccc inset;
     box-shadow: inset 0 2px 8px #ccc;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 700;
-    text-align: center;
+    text-align: left;
+    padding-left: 25px;
     color: #ffd900;
   }
 }
