--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.cfc351.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.cd4331.css">
