--- a/source-src/css/aside.scss
+++ b/source-src/css/aside.scss
@@ -1,6 +1,6 @@
 .wrap-side-operation {
   position: fixed;
-  right: 34px;
+  right: 40px;
   top: 18px;
   z-index: 999;
   font-size: 14px;
@@ -16,8 +16,11 @@
   }
 }
 .mod-side-operation {
-  width: 35px;
+  box-sizing: border-box;
+  width: 118px;
   text-align: center;
+  // line-height: 35px;
+  vertical-align: middle;
 }
 .jump-container {
   &:hover {
@@ -30,7 +33,7 @@
 .toc-container {
   position: relative;
   cursor: pointer;
-  width: 35px;
+  width: 118px;
   height: 35px;
   opacity: 0.8;
 }
@@ -69,12 +72,11 @@
 }
 
 .toc-container.tooltip-left {
-  background: #212121;
-  box-shadow: 0 0 10px black;
+  box-sizing: border-box;
   border-radius: 35px;
   transition: 0.3s;
   &:hover {
-    background: #666;
+    color: gold;
   }
   .icon-font {
     font-size: 20px;
@@ -82,8 +84,15 @@
     color: #ffd900;
     font-weight: 700;
   }
+  .catalog {
+    font-size: 24px;
+    color: #ffd900;
+    font-weight: 700;
+    height: 35px;
+    line-height: 35px;
+  }
   .tooltip {
-    width: 35px;
+    width: 100%;
     height: 35px;
     top: 0;
     left: 0;
@@ -92,7 +101,7 @@
     // max-height: 320px;
     text-align: left;
     padding: 10px 10px;
-    right: 4.4em;
+    right: 11em;
     max-width: 220px;
     width: initial;
     font-size: 14px;
