--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -387,7 +387,7 @@ body,
     .profilepic {
       display: block;
       position: relative;
-      z-index: 100;
+      // z-index: 100;
       box-shadow: 0px 0px 20px #ccc;
     }
   }
@@ -425,7 +425,6 @@ body,
     justify-content: space-around;
     position: relative;
     z-index: 1;
-    border: 1px solid black;
     background-color: #212121;
     box-shadow: 0 0 15px black;
     border-radius: 5px;
