--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -167,6 +167,10 @@
       font-size: 12px;
     }
 
+    .v[data-class=v] .vinput {
+      color: #ccc;
+    }
+
     @media screen and (max-width:800px) {
       .comments {
         margin: auto;
