--- a/layout/_partial/post/valine.ejs
+++ b/layout/_partial/post/valine.ejs
@@ -13,6 +13,8 @@
     app_key: "<%= theme.valine.appkey %>",
     placeholder: "<%= theme.valine.placeholder %>",
     avatar: "<%= theme.valine.avatar %>",
+    pageSize: '{{ theme.valine.pageSize }}' || 10,
+    avatar_cdn: "<%= theme.valine.avatar_cdn %>",
   });
 
 </script>
