--- a/source-src/css/tooltip.scss
+++ b/source-src/css/tooltip.scss
@@ -192,7 +192,7 @@
   }
 
   .tooltip-inner {
-    background: rgba(36, 193, 246, 0.9);
+    background: #333;
     padding: 30px;
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
