--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -171,6 +171,10 @@
       color: #ccc;
     }
 
+    .v[data-class=v] .vpower {
+      display: none;
+    }
+
     @media screen and (max-width:800px) {
       .comments {
         margin: auto;
