--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.4bf4b3.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.d1d22b.css">
