--- a/source-src/css/tools.scss
+++ b/source-src/css/tools.scss
@@ -38,7 +38,8 @@
       margin: 20px 0 20px 0;
       position: relative;
       .search-ipt {
-        width: 300px;
+        padding-left: 5px;
+        width: 310px;
         color: #fff;
         background: none;
         border: none;
@@ -47,7 +48,7 @@
       }
       .icon {
         position: absolute;
-        right: 0;
+        right: -5px;
         top: 7px;
         color: #fff;
         cursor: pointer;
@@ -208,7 +209,7 @@
 
   .tools-section {
     margin: 10px 0;
-    border-radius: 30px;
+    border-radius: 10px;
     box-shadow: 0 0 10px inset;
 
     .about-wrap {
