--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -6,7 +6,7 @@
     <div class="slider-trigger list" q-on="click: openSlider(e)">
       <i class="icon icon-sort"></i>
     </div>
-    <span class="btnctn-name" style="display: none;">dnhyxc</span>
+    <span class="btnctn-name">HOME</span>
   </div>
   <div class="intrude-less">
     <header id="header" class="inner">
