--- a/source-src/css/mobile-slider.scss
+++ b/source-src/css/mobile-slider.scss
@@ -41,6 +41,16 @@
   padding: 0 24px;
 }
 
+.tools-col .tools-section .search-wrap .icon {
+  position: absolute;
+  right: -3px;
+  top: 7px;
+}
+
+.tools-col .tools-section .search-wrap .search-ipt {
+  width: 310px;
+}
+
 .social {
   .icon-wrap {
     width: 35px;
