--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -7,7 +7,7 @@
       <%- partial('_partial/left-col', null, {cache: !config.relative_link}) %>
     </div>
     <div class="mid-col" q-class="show:isShow,hide:isShow|isFalse">
-      <div class="main"></div>
+      <div class="main">loading...</div>
       <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %>
       <div id="wrapper" class="body-wrap">
         <div class="artWrap">
