--- a/source-src/css/tools.scss
+++ b/source-src/css/tools.scss
@@ -39,7 +39,7 @@
       position: relative;
       .search-ipt {
         padding-left: 5px;
-        width: 310px;
+        width: calc(310px - 10px);
         color: #fff;
         background: none;
         border: none;
@@ -48,7 +48,7 @@
       }
       .icon {
         position: absolute;
-        right: -5px;
+        right: 5px;
         top: 7px;
         color: #fff;
         cursor: pointer;
