change h3 h4 h5 h6 border-bottom

--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -161,7 +161,7 @@
     font-weight: bold;
     color: #f5edc6;
     padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 5px solid #555;
   }
   video {
     max-width: 100%;
