--- a/source-src/css/article.scss
+++ b/source-src/css/article.scss
@@ -213,7 +213,7 @@
     font-weight: 300;
     color: #fff;
     padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 5px solid #888;
   }
   video {
     max-width: 100%;
