--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.433c48.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.0be97a.css">
