--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -159,7 +159,7 @@
   padding-top: 20px;
   margin: 30px $articlePadding 0 $articlePadding;
   min-height: 72px;
-  border-top: 1px solid #ddd;
+  border-top: 5px solid #555;
 }
 .article-info-post.article-info {
   padding: 0;
