--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -137,7 +137,7 @@
 <% } %>
 <% } %>
 
-<% if (!index){ %>
+<!-- <% if (!index){ %>
 <% if (theme.valine && theme.valine.appid && theme.valine.appkey){ %>
 <section id="comments" class="comments">
   <style>
@@ -198,7 +198,7 @@
       border-left: none;
     }
 
-    .v[data-class=v] .vcards .vcard .vh .vmeta .vat{
+    .v[data-class=v] .vcards .vcard .vh .vmeta .vat {
       margin-right: 5px;
     }
 
@@ -211,7 +211,8 @@
         margin: auto;
         padding: 10px;
         background: #292929
-      }      
+      }
+
       .v[data-class=v] {
         box-shadow: none;
         padding: 1px 0 0 0;
@@ -226,5 +227,12 @@
 	        url: config.url+url_for(post.path)
 	        }) %>
 </section>
+<% } %>
+<% } %> -->
+
+<% if (!index){ %>
+<% if (theme.gitalk.enable){ %>
+<div id="gitalk-container"></div>
+<%- include post/gitalk.ejs %>
 <% } %>
 <% } %>
