--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -166,3 +166,42 @@
   border: none;
   margin: -30px 0 20px $articlePadding;
 }
+
+#gitalk-container {
+  padding: 0 20px;
+
+  .gt-container {
+    background-color: #333;
+    padding: 0 3px;
+
+    .gt-header-textarea {
+      background-color: #292929;
+    }
+
+    .gt-header-preview {
+      background-color: #292929;
+
+      p {
+        color: #ccc;
+        font-size: 14px;
+      }
+    }
+
+    .gt-comment-content:hover {
+      box-shadow: 0 0 8px #ccc inset;
+    }
+
+    .gt-comment-admin .gt-comment-content {
+      background-color: #292929;
+    }
+
+    .gt-comment-body p {
+      color: #ccc !important;
+      font-size: 14px;
+    }
+
+    .markdown-body blockquote {
+      border-left: 2px solid #666;
+    }
+  }
+}
