--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.c24e62.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.69d2f3.css">
