--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -174,6 +174,11 @@
     background-color: #333;
     padding: 0 3px;
 
+    .gt-meta {
+      margin: 0 0 1.25em 0;
+      border-bottom: 1px solid #666;
+    }
+
     .gt-header-textarea {
       background-color: #292929;
     }
@@ -202,6 +207,20 @@
 
     .markdown-body blockquote {
       border-left: 2px solid #666;
+    }
+
+    .markdown-body h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: #ccc;
+    }
+
+    .markdown-body h1,
+    h2 {
+      border-bottom: 2px solid #666;
     }
   }
 }
