--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -21,6 +21,9 @@
             </div>
           </div>
         </div>
+        <div id="scrollTop">
+          <div class="triangle"></div>
+        </div>
       </div>
       <%- partial('_partial/footer') %>
     </div>
