--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -46,6 +46,28 @@ body,
   overflow-y: auto;
 }
 
+#scrollTop {
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  left: 50%;
+  bottom: 70px;
+  transform: translateX(-50%);
+  background-color: rgba(225, 225, 225, 0.3);
+  border-radius: 45px;
+  box-shadow: 0 0 10px #ccc inset;
+  z-index: 12;
+  display: none;
+
+  .triangle {
+    width: 0;
+    height: 0;
+    border: 13px solid;
+    border-color: transparent transparent rgb(230, 238, 203);
+    margin: 2px auto;
+  }
+}
+
 .artWrap {
   width: 100%;
   height: 100%;
