--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -90,7 +90,6 @@ body,
   position: fixed;
   width: 100%;
   height: 50px;
-  margin-bottom: 100px;
   top: -5px;
   z-index: 20;
   text-align: center;
@@ -476,4 +475,8 @@ body,
       color: #fff;
     }
   }
+}
+
+#scrollTop {
+  // display: none;
 }
