change gitalk btn color

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -466,7 +466,7 @@ body,
     padding: 0 3px;
 
     .gt-btn-preview {
-      background-color: #666;
+      background-color: #6190e8;
     }
 
     .gt-btn {
