change gitalk btn color

--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -195,10 +195,10 @@
       }
     }
 
-    .gt-user:hover {
-      background-color: #f5edc6;
-      color: #222;
-    }
+    // .gt-user:hover {
+    //   background-color: #f5edc6;
+    //   color: #222;
+    // }
 
     .gt-popup {
       top: 3.375em;
