--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -1,55 +1,88 @@
+// .archives-wrap {
+//   position: relative;
+//   margin: 0 30px;
+//   padding-right: 60px;
+//   border-bottom: 1px solid #eee;
+//   background: #888;
+//   &:first-child {
+//     margin-top: 30px;
+//   }
+//   &:last-child {
+//     margin-bottom: 80px;
+//   }
+//   .archive-year-wrap {
+//     line-height: 35px;
+//     width: 200px;
+//     position: absolute;
+//     padding-top: 15px;
+//     font-size: 1.8em;
+//     z-index: 1;
+//   }
+//   .archive-year-wrap a {
+//     color: #ccc;
+//     font-weight: bold;
+//     padding-left: 48px;
+//   }
+// }
+
 .archives-wrap {
-  position: relative;
-  margin: 0 30px;
-  padding-right: 60px;
-  border-bottom: 1px solid #eee;
-  background: #fff;
-  &:first-child {
-    margin-top: 30px;
-  }
-  &:last-child {
-    margin-bottom: 80px;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 30px;
+  background-color: #222;
+  box-shadow: 0 0 8px #ccc;
+  border-radius: 5px;
+  // padding-bottom: 20px;
+
   .archive-year-wrap {
-    line-height: 35px;
-    width: 200px;
-    position: absolute;
-    padding-top: 15px;
-    font-size: 1.8em;
-    z-index: 1;
-  }
-  .archive-year-wrap a {
-    color: #666;
-    font-weight: bold;
-    padding-left: 48px;
+    // width: 100px;
+    padding-left: 5px;
+    margin-right: 10px;
+    .archive-year {
+      display: inline-block;
+      width: 100%;
+      font-size: 28px;
+      font-weight: 700;
+      color: rgb(217, 255, 0);
+    }
   }
 }
 
 .archives {
+  flex: 1;
   position: relative;
   .article-info {
     border: none;
   }
   .archive-article {
-    margin-left: 200px;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-    border-top: 1px solid #fff;
+    // margin-left: 200px;
+    // padding: 0 0 20px;
+    // border-bottom: 1px solid #eee;
+    // border-top: 1px solid #fff;
     position: relative;
     &:first-child {
       border-top: none;
     }
     &:last-child {
       border-bottom: none;
+
+      .archive-article-header {
+        margin-bottom: 0;
+      }
+
+      .article-info.info-on-right {
+        border-bottom: none;
+      }
     }
   }
 
   .archive-article-title {
-    font-size: 16px;
-    color: #333;
+    font-size: 22px;
+    color: #ccc;
+    padding-left: 5px;
     transition: color 0.3s;
     &:hover {
-      color: #657b83;
+      color: rgb(250, 232, 132);
     }
     span {
       display: block;
@@ -72,21 +105,37 @@
 }
 
 .archive-article-inner {
+  display: flex;
+  // justify-content: space-between;
+  flex-direction: column;
   .icon-clock {
     margin-right: 5px;
   }
+
   .archive-article-header {
     position: relative;
     min-height: 36px;
+    background-color: #292929;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    // box-shadow: -2px 3px 5px #999;
+
+    .art-title {
+    }
   }
   .article-meta {
     position: relative;
-    float: right;
-    margin-top: -10px;
     color: #555;
     background: none;
     text-align: right;
     width: auto;
+
+    .time-count {
+      position: absolute;
+      right: 5px;
+      top: -9px;
+    }
+
     .article-date {
       time {
         color: #aaa;
@@ -106,8 +155,6 @@
     .archive-article-date {
       cursor: default;
       font-size: 12px;
-      margin-bottom: 5px;
-      margin-top: -10px;
       margin-right: 0;
       time {
       }
