--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.a8fee5.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.6f692d.css">
