--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -135,7 +135,7 @@ body,
   border-left: none;
   padding: 0;
   border-bottom: 1px dotted #ddd;
-  height: 65px;
+  // height: 65px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -146,7 +146,8 @@ body,
     justify-content: space-between;
     align-items: center;
     right: 0;
-    width: 100%;
+    top: 0;
+    // width: 100%;
     height: 30px;
     font-size: 12px;
     margin-bottom: 10px;
@@ -198,7 +199,7 @@ body,
 }
 .article {
   padding: 10px;
-  margin: 10px 10px 0px 10px;
+  margin: 10px 10px;
   border: 0;
   font-size: 16px;
   color: #ccc;
@@ -310,8 +311,8 @@ body,
   float: initial;
 }
 .archives-wrap {
-  margin: 10px 10px 0px;
-  padding: 10px;
+  margin: 10px 10px;
+  padding: 0 10px 10px 10px;
   .archive-article-title {
     font-size: 16px;
   }
@@ -326,7 +327,7 @@ body,
     .archive-article-date {
       font-size: 12px;
       margin-right: 10px;
-      margin-top: -5px;
+      // margin-top: -5px;
     }
     .article-tag-list-link {
       font-size: 12px;
@@ -335,8 +336,12 @@ body,
 }
 .archives {
   .archive-article {
-    padding: 10px 0;
+    padding-top: 10px;
     margin-left: 0;
+  }
+
+  .archive-article-header {
+    margin-bottom: 0;
   }
 }
 
@@ -381,7 +386,6 @@ body,
     color: #fff;
   }
   .overlay {
-    height: 110px;
     position: absolute;
     width: 100%;
     z-index: 2;
