change mobile date style

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -327,7 +327,10 @@ body,
     .archive-article-date {
       font-size: 12px;
       margin-right: 10px;
-      // margin-top: -5px;
+    }
+    .time-count {
+      top: -13px;
+      right: -5px;
     }
     .article-tag-list-link {
       font-size: 12px;
