--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -155,7 +155,7 @@
   margin: 10px 5px 0 5px;
   height: 100%;
   overflow: hidden;
-  border-bottom: 1px solid #666;
+  // border-bottom: 1px solid #666;
   padding-bottom: 10px;
 }
 .article-info-index.article-info {
