--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -313,6 +313,24 @@ body,
 .archives-wrap {
   margin: 10px 10px;
   padding: 0 10px 10px 10px;
+  .archive-year-wrap {
+    position: relative;
+    width: 90px;
+    margin-right: 10px;
+    margin-top: 10px;
+    .archive-year {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      display: inline-block;
+      width: 100%;
+      font-size: 28px;
+      font-weight: 700;
+      color: rgb(217, 255, 0);
+      text-align: center;
+      border-radius: 5px;
+    }
+  }
   .archive-article-title {
     font-size: 16px;
   }
