change date radius

--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -12,6 +12,7 @@
     width: 90px;
     margin-right: 8px;
     background-color: #292929;
+    border-radius: 5px;
     .archive-year {
       position: absolute;
       top: 50%;
