--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -20,10 +20,14 @@
       width: 100%;
       font-size: 28px;
       font-weight: 700;
-      color: rgb(217, 255, 0);
+      color: #ffd900;
       text-align: center;
       border-radius: 5px;
       padding-left: 3px;
+    }
+
+    .archive-year:hover {
+      color: rgb(217, 255, 0);
     }
   }
 }
@@ -54,11 +58,11 @@
 
   .archive-article-title {
     font-size: 22px;
-    color: #ccc;
+    color: #ffd900;
     padding-left: 5px;
     transition: color 0.3s;
     &:hover {
-      color: rgb(250, 232, 132);
+      color: rgb(217, 255, 0);
     }
     span {
       display: block;
