--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -326,7 +326,7 @@ body,
       width: 100%;
       font-size: 28px;
       font-weight: 700;
-      color: rgb(217, 255, 0);
+      color: #ffd900;
       text-align: center;
       border-radius: 5px;
     }
