--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -232,7 +232,7 @@
 
 <% if (!index){ %>
 <% if (theme.gitalk.enable){ %>
-<div id="gitalk-container"></div>
+<div id="gitalk-container" <% if (post.encrypt == true) { %>style="display:none" <% } %>></div>
 <%- include post/gitalk.ejs %>
 <% } %>
 <% } %>
