update input style

--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -78,6 +78,9 @@
   line-height: 1.8em;
   padding-right: 7.6923%;
   padding-left: 7.6923%;
+  .hbe-button {
+    margin-top: 20px;
+  }
   p {
     margin-top: 10px;
   }
