--- a/source-src/css/article-nav.scss
+++ b/source-src/css/article-nav.scss
@@ -1,6 +1,6 @@
 #article-nav {
-  margin: 0 0;
-  padding: 0 32px 10px;
+  margin-bottom: 10px;
+  padding: 0 32px;
   min-height: 30px;
 }
 #article-nav .article-nav-link-wrap {
