--- a/source-src/css/mobile-slider.scss
+++ b/source-src/css/mobile-slider.scss
@@ -57,13 +57,14 @@
     height: 35px;
     border-radius: 35px;
     margin-right: 5px;
-
+    &:last-child {
+      margin-right: 0px;
+    }
     .github {
       background: url(./img/github.png) no-repeat;
       background-color: #fff;
       background-size: 100% 100%;
     }
-
     .juejin {
       background: url(./img/juejin.png) no-repeat;
       background-color: #007fff;
