update menu style

--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -222,7 +222,7 @@
     }
 
     .gt-meta {
-      margin: 0 1.25em 0;
+      margin: 0 0 1.25em;
       border-bottom: 1px solid #666;
       z-index: 5;
     }
