--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -472,7 +472,7 @@ body,
     position: relative;
     z-index: 1;
     background-color: #292929;
-    box-shadow: 0 0 15px black;
+    box-shadow: 0 0 6px #ccc inset;
     border-radius: 5px;
   }
   li {
