--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -1,16 +1,16 @@
 .archives-wrap {
   display: flex;
   justify-content: space-between;
-  margin: 10px 30px;
+  margin: 0 10px 10px;
   background-color: #222;
-  box-shadow: 0 0 8px #ccc;
-  border-radius: 5px;
+  box-shadow: 0 0 10px #ccc inset;
+  border-radius: 10px;
   padding: 8px 8px;
 
   .archive-year-wrap {
     position: relative;
     width: 90px;
-    margin-right: 8px;
+    margin-right: 5px;
     background-color: #292929;
     border-radius: 5px;
     .archive-year {
