--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -1,6 +1,7 @@
 .left-col {
   margin: 10px 10px;
-  background-color: rgba(0, 0, 0, 0.2);
+  // background-color: rgba(0, 0, 0, 0.2);
+  background-color: #252525;
   border-radius: 15px;
   box-shadow: 0px 0px 10px #ccc inset;
   width: 300px;
@@ -30,7 +31,7 @@
     position: relative;
     border-bottom: 1px solid color-border;
     a {
-      color: #fff;
+      // color: #fff;
       &:hover {
         color: rgb(255, 217, 0);
       }
@@ -71,7 +72,7 @@
         margin-bottom: 10px;
         border-radius: 8px;
         // box-shadow: 0px 0px 10px #ccc inset;
-        box-shadow: 0px 0px 15px black;
+        box-shadow: 0px 0px 6px #ccc inset;
 
         a {
           display: inline-block;
@@ -137,6 +138,9 @@
       font-size: 35px;
       transition: 0.3s;
       font-weight: 700;
+      a {
+        color: #fff;
+      }
     }
   }
 
@@ -174,16 +178,32 @@
         height: 30px;
         line-height: 30px;
         cursor: pointer;
-        box-shadow: 0px 0px 10px #0a0a0a;
-        background-color: #212121;
+        background-color: #252525;
         font-size: 14px;
 
+        .tips-a {
+          color: hsla(0, 0%, 88%, 0.6);
+          font-weight: 700;
+        }
+
         &:first-child {
-          border: 1px solid #212121;
+          border-top-left-radius: 6px;
+          border-top-right-radius: 6px;
+          box-shadow: 0px 0px 5px #ccc inset;
+          position: relative;
+          z-index: 5;
+        }
+
+        &:nth-child(2) {
+          box-shadow: 0px 0px 5px #ccc inset;
+          margin-top: -1px;
         }
 
         &:last-child {
-          border: 1px solid #212121;
+          border-bottom-left-radius: 6px;
+          border-bottom-right-radius: 6px;
+          box-shadow: 0px 0px 5px #ccc inset;
+          margin-top: -1px;
         }
 
         &:not(:first-child, :last-child) {
@@ -191,7 +211,7 @@
           border-right: 1px solid #212121;
         }
 
-        border-radius: 6px;
+        // border-radius: 6px;
 
         a {
           display: inline-block;
@@ -200,7 +220,7 @@
         }
 
         &:hover {
-          background-color: #94635c;
+          background-color: #959595;
           color: rgb(255, 217, 0);
         }
       }
