--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -94,7 +94,7 @@
   position: relative;
   box-sizing: border-box;
   border-left: 8px solid rgb(255, 217, 0);
-  padding: 30px 0px 15px 10px;
+  padding: 16px 0px 15px 10px;
   padding-left: calc(7.6923% - 8px);
   border-top-left-radius: 10px;
 }
@@ -285,9 +285,9 @@
   padding: 20px;
 }
 .category-list li.category-list-item:hover {
-  background-color: #939393;
+  background-color: #888;
   a {
-    color: gold;
+    color: #c3fb08;
   }
 }
 .tag-cloud {
@@ -325,20 +325,20 @@
   font-weight: bold;
   font-family: STCaiyun, STXingkai;
   display: block;
-  /*渐变背景*/
+  /*渐变背景 #3498db,   #d71345 20%,  #d71345 70%, */
   background-image: -webkit-linear-gradient(
     left,
-    #3498db,
-    #f47920 10%,
-    #d71345 20%,
+    #41c7af,
+    #c4e759 10%,
+    #f47920 20%,
     #f7acbc 30%,
     #ffd400 40%,
-    #3498db 50%,
-    #f47920 60%,
-    #d71345 70%,
+    #41c7af 50%,
+    #c4e759 60%,
+    #f47920 70%,
     #f7acbc 80%,
     #ffd400 90%,
-    #3498db
+    #41c7af
   );
   color: transparent;
   /*文字填充色为透明*/
@@ -382,6 +382,7 @@
 
     a {
       text-decoration: none;
+      color: gold;
     }
   }
 
@@ -454,6 +455,7 @@
   margin: 0 20px;
   word-break: keep-all;
   position: relative;
+  color: gold;
 }
 .tag-cloud a:hover::before {
   width: 100%;
@@ -467,7 +469,7 @@
   right: 0;
   bottom: 0;
   height: 2px;
-  background: #08c;
+  background: gold;
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
