--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -102,6 +102,16 @@
         }
       }
     }
+
+    @keyframes turnY {
+      0% {
+        transform: rotateY(0deg);
+      }
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+
     .profilepic {
       text-align: center;
       display: block;
@@ -120,6 +130,11 @@
       -webkit-box-pack: center;
       -webkit-box-align: center;
       text-align: center;
+      &:hover {
+        animation-name: turnY;
+        animation-duration: 3s;
+        animation-iteration-count: 1;
+      }
       img {
         border-radius: 300px;
         opacity: 1;
@@ -139,7 +154,12 @@
       transition: 0.3s;
       font-weight: 700;
       a {
-        color: #fff;
+        color: #fff8d6;
+        text-shadow: -1px -1px 0 #fff8d6, 2px 2px 0 #ccc, 1px 1px 0 #ccc;
+
+        &:hover {
+          color: gold;
+        }
       }
     }
   }
