--- a/source-src/css/aside.scss
+++ b/source-src/css/aside.scss
@@ -138,6 +138,13 @@
         color: black;
         background-color: #d9ff00;
         border-radius: 5px;
+
+        .toc-text {
+          background-color: #d9ff00;
+          display: inline-block;
+          height: 100%;
+          border-radius: 5px;
+        }
       }
     }
   }
