--- a/source-src/css/article-nav.scss
+++ b/source-src/css/article-nav.scss
@@ -5,17 +5,16 @@
 }
 #article-nav .article-nav-link-wrap {
   font-size: 14px;
+
+  &:hover {
+    color: gold;
+  }
 }
+
 #article-nav .article-nav-link-wrap .article-nav-title {
   display: inline-block;
   font-size: 16px;
   transition: color 0.3s;
-}
-#article-nav .article-nav-link-wrap:hover i {
-  color: #4d4d4d;
-}
-#article-nav .article-nav-link-wrap:hover .article-nav-title {
-  color: #4d4d4d;
 }
 #article-nav #article-nav-older {
   float: right;
