change h4 font color

--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -46,7 +46,7 @@
 
 .article-inner h4 {
   letter-spacing: 0.140625em;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 .article-inner h6 {
@@ -170,7 +170,7 @@
   h6 {
     margin-top: 20px;
     font-weight: bold;
-    color: #f5edc6;
+    color: #ffec8b;
     padding-bottom: 5px;
   }
   video {
