change article header style

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.978c22.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.df49fe.css">
