--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -7,7 +7,7 @@
 
 .article-inner {
   border-color: #d1d1d1;
-  padding-bottom: 3px;
+  padding-bottom: 4px;
 }
 
 .article-inner h1 {
@@ -172,6 +172,9 @@
     font-weight: bold;
     color: #ffec8b;
     padding-bottom: 5px;
+  }
+  h4 {
+    margin-top: 31px;
   }
   video {
     max-width: 100%;
