--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -294,12 +294,16 @@ body,
 #article-nav {
   margin: 0;
   padding: 5px 10px 10px;
+  display: flex;
+  justify-content: space-between;
 }
 #article-nav #article-nav-older {
   float: none;
+  display: flex;
 }
 #article-nav .article-nav-link-wrap .article-nav-title {
   font-size: 16px;
+  margin-right: 5px;
 }
 
 #page-nav .extend {
